Fixed bug #40591 (list()="string"; gives invalid opcode)